# latency-aware-cnn-inference

./: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  build_docker.sh  keygen_for_batch-axis.sh  keygen_for_channel-wise.sh
include/: cmdline.h
src/: example.cpp  gen_keys.cpp  main.cpp  network_sample.cpp
src/cnn/: CMakeLists.txt  network.cpp  network.hpp  network_builder.cpp  network_builder.hpp
src/cnn/layers/: activation.cpp  activation.hpp  avg_pool_2d.cpp  avg_pool_2d.hpp  batch_norm.cpp  batch_norm.hpp  conv_2d.cpp  conv_2d.hpp  flatten.cpp  flatten.hpp  layer.cpp  layer.hpp  layer_builder.cpp  layer_builder.hpp  layer_type.hpp  linear.cpp  linear.hpp  util.cpp  util.hpp
src/utils/: constants.cpp  constants.hpp  globals.cpp  globals.hpp  helper.cpp  helper.hpp  load_dataset.cpp  load_dataset.hpp  opt_option.hpp  types.hpp
train_model/: pyproject.toml
train_model/cifar-10/: 5layer_cnn.py
train_model/mnist/: 3layer_cnn.py
train_model/utils/: activations.py  constants.py  ghost_module.py  plots.py  torch_hdf5.py  torch_json.py
